fdo#74775: Preseved Citation after round trip.

Change-Id: Ie1b0ac3cb4d4b9bf305323599d5e4b63f913fb1b