sw/source/filter/ww8/fields.hxx
@@ -121,7 +121,8 @@ namespace ww
         eADDRESSBLOCK = 93,
         eGREETINGLINE = 94,
         eSHAPE = 95,
-        eBIBLIOGRPAHY=96
+        eBIBLIOGRPAHY=96,
+        eCITATION = 97
     };
 
     /** Find the English Field Name from a winword index
